--- a/smoking_and_covid19.html
+++ b/smoking_and_covid19.html
@@ -862,7 +862,7 @@ ggplot(immune_weaken_df,aes(fill=smoke,x=immune_weaken,y=percentage))+
     y=&quot;value&quot;
   )+
   theme(text=element_text(size=18),axis.text.x=element_text(angle=45))</code></pre>
-<p><img src="smoking_and_covid19_files/figure-html/unnamed-chunk-2-8.png" width="90%" /></p>
+<p><img src="smoking_and_covid19_files/figure-html/unnamed-chunk-2-8.png" width="90%" /> From the graph above, we can see that male smoke less than female. Also, from the above age chart, people who are younger</p>
 <pre class="r"><code>#Cancer
 cancer_df=
   adult%&gt;%
@@ -919,7 +919,7 @@ diabetes_df</code></pre>
     y=&quot;value&quot;
   )+
   theme(text=element_text(size=18),axis.text.x=element_text(angle=45))</code></pre>
-<p><img src="smoking_and_covid19_files/figure-html/unnamed-chunk-3-2.png" width="90%" /></p>
+<p><img src="smoking_and_covid19_files/figure-html/unnamed-chunk-3-2.png" width="90%" /> People who have cancer smoke less in the year of 2020 compare to the year of 2019. People who have diabetes smoke less in the year of 2020 compare to the year of 2019.</p>
 <pre class="r"><code>#COP
 cop_df=
   adult%&gt;%
@@ -974,7 +974,7 @@ hypev_df</code></pre>
     y=&quot;value&quot;
   )+
   theme(text=element_text(size=18),axis.text.x=element_text(angle=45))</code></pre>
-<p><img src="smoking_and_covid19_files/figure-html/unnamed-chunk-4-2.png" width="90%" /></p>
+<p><img src="smoking_and_covid19_files/figure-html/unnamed-chunk-4-2.png" width="90%" /> People who have COPD smoke less in the year of 2020 compare to the year of 2019. People who have hypertention smoke less in the year of 2020 compare to the year of 2019.</p>
 <pre class="r"><code>#Stroke
 stroke_df=
   adult%&gt;%
@@ -1086,7 +1086,7 @@ heart_disease_df</code></pre>
     y=&quot;value&quot;
   )+
   theme(text=element_text(size=18),axis.text.x=element_text(angle=45))</code></pre>
-<p><img src="smoking_and_covid19_files/figure-html/unnamed-chunk-5-4.png" width="90%" /></p>
+<p><img src="smoking_and_covid19_files/figure-html/unnamed-chunk-5-4.png" width="90%" /> People who have asthma and heart disease smoke less in the year of 2020 compare to the year of 2019.</p>
 <pre class="r"><code>#Anxiety
 anxiety_df=
   adult%&gt;%
@@ -1142,7 +1142,7 @@ depression_df</code></pre>
     y=&quot;value&quot;
   )+
   theme(text=element_text(size=18),axis.text.x=element_text(angle=45))</code></pre>
-<p><img src="smoking_and_covid19_files/figure-html/unnamed-chunk-6-2.png" width="90%" /></p>
+<p><img src="smoking_and_covid19_files/figure-html/unnamed-chunk-6-2.png" width="90%" /> People who have anxiety and depression smoke less in the year of 2020.</p>
 <pre class="r"><code>#Bmi
 bmi_df=
   adult%&gt;%
@@ -1210,7 +1210,7 @@ pregnant_df</code></pre>
     y=&quot;value&quot;
   )+
   theme(text=element_text(size=18),axis.text.x=element_text(angle=45))</code></pre>
-<p><img src="smoking_and_covid19_files/figure-html/unnamed-chunk-7-2.png" width="90%" /></p>
+<p><img src="smoking_and_covid19_files/figure-html/unnamed-chunk-7-2.png" width="90%" /> From the above chart, we can see that whether people have healthy weight, obese, overweight all smoke less in the year of 2020 compare to the year of 2019. People who is underweight smoke a little bit more in the year of 2020.</p>
 </div>
 
 
