--- a/smoking_and_covid19.html
+++ b/smoking_and_covid19.html
@@ -337,7 +337,7 @@ div.tocify {
       <a href="part-1-.html">Overall Smoking Trends by NHIS</a>
     </li>
     <li>
-      <a href="par1_brfss.html">Smoking Trends in Different States by BRFSS</a>
+      <a href="part1_brfss.html">Smoking Trends in Different States by BRFSS</a>
     </li>
     <li>
       <a href="smoking_and_covid19.html">Smoking during Covid-19 Pendamic</a>
