--- a/smoking_and_covid19.html
+++ b/smoking_and_covid19.html
@@ -345,6 +345,9 @@ div.tocify {
     <li>
       <a href="quit_smoke.html">Quit Smoking Analysis</a>
     </li>
+    <li>
+      <a href="quite_smoke.html">Quit Smoking!</a>
+    </li>
   </ul>
 </li>
 <li>
