--- a/smoking_and_covid19.html
+++ b/smoking_and_covid19.html
@@ -13,8 +13,8 @@
 
 <title>Smoking During the Covid-19 Pandemic</title>
 
-<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/sandstone.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -384,8 +384,10 @@ div.tocify {
 </div>
 
 
+<p>We aim to look at the distribution of <strong>current smoker</strong>, <strong>former smoker</strong>, and <strong>never smoker</strong> among different subgroups defined by demographic characteristics, and if the proportion of current smoker with certain medical conditions decreases in 2020 comparing to 2019.</p>
 <div id="age" class="section level2">
 <h2>Age</h2>
+<p>Based on the graph, in 2020, there were more people aged 50 to 70 who were current smoker and people aged 60 to 80 who were former smoker, with the highest density at age of 60+ and 70, respectively. The age distribution of people who had never smoked was relatively even.</p>
 <pre class="r"><code>age_df =
   adult_smoke %&gt;%
   filter(year == 2020) %&gt;%
@@ -401,10 +403,10 @@ age_df %&gt;%
     caption = &quot;Data from the Nationnal Health Interview Survey&quot;
   )</code></pre>
 <p><img src="smoking_and_covid19_files/figure-html/smoker_by_age-1.png" width="90%" /></p>
-<p>In the density plot, people in the age between 50-70 have the biggest potential to become a smoker, also people at the age of 30 also have great risk of being a smoker. People at the age above 60 have the biggest possibility to be a former smoker.</p>
 </div>
 <div id="biological-sex" class="section level2">
 <h2>Biological Sex</h2>
+<p>The distribution of smoker by sex shows that, although there were more female respondents of the health survey, the number of smoker (either current or former) is less than male.</p>
 <pre class="r"><code>sex_df =
   adult_smoke %&gt;%
   filter(year == 2020) %&gt;%
@@ -422,10 +424,10 @@ sex_df %&gt;%
     caption = &quot;Data from the National Health Interview Survey&quot;
   )</code></pre>
 <p><img src="smoking_and_covid19_files/figure-html/smoker_by_sex-1.png" width="90%" /></p>
-<p>From the distribution of smoker by sex in 2020, female have more never-smoker compare to male, also have a higher percentage of never-smoker, which means that female have a higher probability of not smoking compare to male.</p>
 </div>
 <div id="sexual-orientation" class="section level2">
 <h2>Sexual Orientation</h2>
+<p>The table shows that the number of people with sexual orientation other than <strong>straight</strong> were extremely fewer than straight. Based on the graph, the proportion of smoker (current + former) within the gay/lesbian group was larger than straight; Bisexual people has the largest current smoker rate, which can be clearly seen in the graph.</p>
 <pre class="r"><code>orient_df =
   adult_smoke %&gt;%
   filter(year == 2020) %&gt;% 
@@ -496,10 +498,10 @@ knitr::kable(orient_tb)</code></pre>
     caption = &quot;Data from the National Health Interview Survey&quot;
   )</code></pre>
 <p><img src="smoking_and_covid19_files/figure-html/smoker_by_orient-1.png" width="90%" /></p>
-<p>Among five sexual orientation, people have approximately similar proportions. People who are bisexual have the largest amount of current smoker, whereas people who are straight have the smallest amount of current smoker.</p>
 </div>
 <div id="education" class="section level2">
 <h2>Education</h2>
+<p>It is interesting to see that the proportion of either current smoker or former smoker decreased with the increase of education level.</p>
 <pre class="r"><code>education_df =
   adult_smoke %&gt;% 
   filter(year == 2020) %&gt;%
@@ -530,10 +532,10 @@ education_df %&gt;%
   ) +
   theme(axis.text.x = element_text(angle = 45))</code></pre>
 <p><img src="smoking_and_covid19_files/figure-html/smoker_by_education-1.png" width="90%" /></p>
-<p>From the graph above, people with higher education level tends to have lower risk of being a smoker, on the contrary, people who are poor-educated have higher risk of being a smoker, whether currently or formerly.</p>
 </div>
 <div id="race" class="section level2">
 <h2>Race</h2>
+<p><strong>White</strong> people is the majority group in the U.S., and it is shown by the table. <strong>AIAN</strong> and <strong>Multiple Races</strong> only had a very small number of people. Based on the graph, <strong>AIAN</strong> has the highest smoking rate combining current smoker and former smoker, and the current smoker rate is worth noting. <strong>Asian</strong> has the lowest proportion of current smoker and former smoker.</p>
 <pre class="r"><code>race_df =
   adult_smoke %&gt;%
   filter(year == 2020) %&gt;%
@@ -622,10 +624,10 @@ knitr::kable(race_tb)</code></pre>
     caption = &quot;Data from the National Health Interview Survey&quot;
   )</code></pre>
 <p><img src="smoking_and_covid19_files/figure-html/smoker_by_race-1.png" width="90%" /></p>
-<p>People who is Aian and other have the largest amount of smokers, and people who is Asian have the smallest amount of smokers. White people also have a large amount of smokers.</p>
 </div>
 <div id="disability" class="section level2">
 <h2>Disability</h2>
+<p>People with disability is considered as a minority group in the U.S. Based on the graph, the proportion of either current smoker or former smoker are significantly larger than people without disability.</p>
 <pre class="r"><code>disability_df = 
   adult_smoke %&gt;%
   filter(year == 2020) %&gt;%
@@ -647,10 +649,11 @@ disability_df %&gt;%
     caption = &quot;Data from the National Health Interview Survey&quot;
   )</code></pre>
 <p><img src="smoking_and_covid19_files/figure-html/smoker_by_disability-1.png" width="90%" /></p>
-<p>People with disability have a higher proportion of smokers compare to people without disability, both currently and formerly.</p>
 </div>
 <div id="specific-medical-conditions" class="section level2">
 <h2>Specific Medical Conditions</h2>
+<p>We selected the variables based on <a href="https://www.cdc.gov/coronavirus/2019-ncov/need-extra-precautions/people-with-medical-conditions.html">the instruction by CDC</a>. People with these medical conditions are more likely to get severe Covid-19. Since smoking would weaken their immune system, making them harder to defend diseases, the proportion of current smoker should have decreased in 2020. The graph shows the difference in proportion of current smoker with certain medical conditions comparing 2019 to 2020. Specifically, we subtracted the proportion in 2020 by 2019, thus, we expected to see a graph with positive values.</p>
+<p>People with <strong>asthma</strong> has the highest decrease in proportion of current smoker; People with <strong>diabetes</strong> and <strong>stroke</strong> has very few changes in the proportion of current smoker; The proportion of current smoker with dementia and pregnancy increased in 2020, which worth noting.</p>
 <pre class="r"><code>cancer_df = cancer_df %&gt;% mutate(disease = &quot;cancer&quot;)
 asthma_df = asthma_df %&gt;% mutate(disease = &quot;asthma&quot;)
 copd_df = copd_df %&gt;% mutate(disease = &quot;copd&quot;) 
@@ -696,7 +699,6 @@ difference_df %&gt;%
         plot.subtitle = element_text(size = 11),
         legend.position = &quot;None&quot;) </code></pre>
 <p><img src="smoking_and_covid19_files/figure-html/prop_diff-1.png" width="90%" /></p>
-<p>Among those diseases, asthma have a largest difference of smoking number compare 2019 with 2020, and astham, mental disease, cancer, copd, coronary heart disease, overweight or obese, hypertension, diabetes and stroke all have positive difference between 2019 and 2020, which means people with those disease tend to quit smoking in the year of 2020. Dementia and pregnant population have the negative difference, the smoking number of 2020 of those two diseases goes up compare with 2019.</p>
 </div>
 
 
