--- a/smoking_and_covid19.html
+++ b/smoking_and_covid19.html
@@ -334,7 +334,7 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="part-1-.html">Overall Smoking Trends by NHIS</a>
+      <a href="part_1.html">Overall Smoking Trends by NHIS</a>
     </li>
     <li>
       <a href="part1_brfss.html">Smoking Trends in Different States by BRFSS</a>
@@ -345,10 +345,10 @@ div.tocify {
     <li>
       <a href="quit_smoke.html">Quit Smoking Analysis</a>
     </li>
-    <li>
-      <a href="quite_smoke.html">Quit Smoking!</a>
-    </li>
   </ul>
+</li>
+<li>
+  <a href="quite_smoke.html">Quit Smoking!</a>
 </li>
 <li>
   <a href="mailto:&lt;lh3109@cumc.columbia.edu&gt;">
