--- a/smoking_and_covid19.html
+++ b/smoking_and_covid19.html
@@ -334,13 +334,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="part_1.html">Overall Smoking Trends by NHIS</a>
+      <a href="part_1.html">Overall Smoking Trends</a>
     </li>
     <li>
-      <a href="part1_brfss.html">Smoking Trends in Different States by BRFSS</a>
+      <a href="part1_brfss.html">Smoking Trends in Different States</a>
     </li>
     <li>
-      <a href="smoking_and_covid19.html">Smoking during Covid-19 Pendamic</a>
+      <a href="smoking_and_covid19.html">Smoking During Covid-19 Pendamic</a>
     </li>
     <li>
       <a href="quit_smoke.html">Quit Smoking Analysis</a>
@@ -349,6 +349,9 @@ div.tocify {
 </li>
 <li>
   <a href="quite_smoke.html">Quit Smoking!</a>
+</li>
+<li>
+  <a href="final_report.html">Final Report</a>
 </li>
 <li>
   <a href="mailto:&lt;lh3109@cumc.columbia.edu&gt;">
