change label angle

--- a/smoking_and_covid19.html
+++ b/smoking_and_covid19.html
@@ -493,7 +493,7 @@ education_df %&gt;%
     y = &quot;Proportion&quot;,
     caption = &quot;Data from the National Health Interview Survey&quot;
   ) +
-  theme(axis.text.x = element_text(angle = 45))</code></pre>
+  scale_x_discrete(labels = c(&quot;GED and \nbelow&quot;, &quot;high school \ngraduate&quot;, &quot;associate \ndegree&quot;, &quot;bachelor&#39;s and \nmaster&#39;s degree&quot;, &quot;professional and \ndoctoral degree&quot;))</code></pre>
 <p><img src="smoking_and_covid19_files/figure-html/smoker_by_education-1.png" width="90%" /></p>
 </div>
 <div id="race" class="section level2">
